# LuaForge-Studio

./: README.md  build.gradle.kts  debug.keystore  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/base64/: CMakeLists.txt  base64.c  lua_base64.c
app/src/main/jni/bson/: CMakeLists.txt  lua-bson.c
app/src/main/jni/canvas/: CMakeLists.txt  canvas.c
app/src/main/jni/cjson/: CMakeLists.txt  dtoa.c  dtoa_config.h  fpconv.c  g_fmt.c  lua_cjson.c  strbuf.c  strbuf.h
app/src/main/jni/crypt/: CMakeLists.txt  lcrypt.c  lcrypt.h  lsha1.c
app/src/main/jni/ffi/: CMakeLists.txt  ast.cc  ast.hh  byopen_android.c  ffi.cc  ffi.h  ffi.hh  ffilib.cc  lib.hh  libffi.hh  lua.hh  parser.cc  parser.hh  prefix.h  util.cc  util.hh
app/src/main/jni/ffi/include/: ffi_common.h
app/src/main/jni/ffi/linux-arm/: ffi.h  ffitarget.h
app/src/main/jni/ffi/linux-arm64/: ffi.h  ffitarget.h
app/src/main/jni/ffi/linux-x86/: ffi.h  ffitarget.h
app/src/main/jni/ffi/msvc_build/aarch64/aarch64_include/: ffi.h
app/src/main/jni/ffi/src/: closures.c  dlmalloc.c  java_raw_api.c  prep_cif.c  raw_api.c  tramp.c  types.c
app/src/main/jni/ffi/src/aarch64/: ffi.c  sysv.S  win64_armasm.S
app/src/main/jni/ffi/src/arm/: ffi.c  ffitarget.h  internal.h  sysv.S  sysv_msvc_arm32.S
app/src/main/jni/ffi/src/x86/: asmnames.h  ffi.c  ffi64.c  ffitarget.h  internal.h  internal64.h  sysv.S  sysv_intel.S  unix64.S  win64.S  win64_intel.S
app/src/main/jni/gl/: CMakeLists.txt  luagl.c  luagl.h  luagl_const.c  luagl_const.h  luagl_util.c  luagl_util.h  luaglu.c
app/src/main/jni/json/: CMakeLists.txt  json-decode.c  json-encode.c  json.c  json.h
app/src/main/jni/lfs/: CMakeLists.txt  lfs.c  lfs.h
app/src/main/jni/lsqlite3/: CMakeLists.txt  lsqlite3.c  sqlite3.h
app/src/main/jni/lua/: CMakeLists.txt  json_parser.c  json_parser.h  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lbitlib.c  lboolib.c  lcode.c  lcode.h  lcorolib.c  lctype.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  ljumptab.h  llex.c  llex.h  llibc.c  llimits.h  lmathlib.c  lmem.h  loadlib.c  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  (+34 more)
app/src/main/jni/luajava/: CMakeLists.txt  decode.c  luajava.c  luajava.h
app/src/main/jni/luaparser/: CMakeLists.txt  luaparser.c  luaparser_jni.c
app/src/main/jni/luv/: CMakeLists.txt
app/src/main/jni/luv/c-api/: compat-5.3.h
app/src/main/jni/luv/include/: uv.h
app/src/main/jni/luv/include/uv/: unix.h  version.h
app/src/main/jni/luv/luv/: async.c  check.c  constants.c  dns.c  fs.c  fs_event.c  fs_poll.c  handle.c  idle.c  lhandle.c  lhandle.h  loop.c  lreq.c  lreq.h  lthreadpool.h  luv.c  luv.h  misc.c  pipe.c  poll.c  prepare.c  process.c  req.c  signal.c  stream.c  tcp.c  thread.c  timer.c  tty.c  udp.c  util.c  util.h  work.c
app/src/main/jni/luv/uv/: fs-poll.c  heap-inl.h  inet.c  threadpool.c  timer.c  uv-common.c  uv-common.h  uv-data-getter-setters.c  version.c
app/src/main/jni/luv/uv/unix/: aix-common.c  aix.c  android-ifaddrs.c  async.c  atomic-ops.h  bsd-ifaddrs.c  core.c  cygwin.c  darwin-proctitle.c  darwin.c  dl.c  freebsd.c  fs.c  fsevents.c  getaddrinfo.c  getnameinfo.c  ibmi.c  internal.h  kqueue.c  linux-core.c  linux-inotify.c  linux-syscalls.c  linux-syscalls.h  loop-watcher.c  loop.c  netbsd.c  no-fsevents.c  no-proctitle.c  openbsd.c  os390-syscalls.c  os390-syscalls.h  os390.c  pipe.c  poll.c  posix-poll.c  process.c  procfs-exepath.c  proctitle.c  pthread-fixes.c  signal.c  (+7 more)
app/src/main/jni/luv/uv/win/: async.c  atomicops-inl.h  core.c  detect-wakeup.c  dl.c  error.c  fs-event.c  fs.c  getaddrinfo.c  getnameinfo.c  handle-inl.h  handle.c  internal.h  loop-watcher.c  pipe.c  poll.c  process-stdio.c  process.c  req-inl.h  signal.c  stream-inl.h  stream.c  tcp.c  thread.c  tty.c  udp.c  util.c  winapi.c  winapi.h  winsock.c  winsock.h
app/src/main/jni/md5/: CMakeLists.txt  compat-5.2.c  compat-5.2.h  md5.c  md5.h  md5lib.c
app/src/main/jni/microaes/: CMakeLists.txt  lua_micro_aes.c  micro_aes.c  micro_aes.h  micro_fpe.h
app/src/main/jni/rawio/: CMakeLists.txt  rawio.c
app/src/main/jni/regex/: CMakeLists.txt  algo.h  common.c  common.h  lposix.c
app/src/main/jni/sensor/: CMakeLists.txt  luasensor.cpp  luasensor.h
app/src/main/jni/socket/: CMakeLists.txt  auxiliar.c  auxiliar.h  buffer.c  buffer.h  compat.c  compat.h  except.c  inet.c  inet.h  io.c  io.h  luasocket.c  mime.c  mime.h  options.c  options.h  select.c  serial.c  socket.h  tcp.c  timeout.c  timeout.h  udp.c  unix.c  unixdgram.c  unixstream.c  usocket.c  wsocket.c
app/src/main/jni/tcc/: CMakeLists.txt  tcc_jni.c  tccgen.c
app/src/main/jni/time/: CMakeLists.txt  lua_time.c  time.c  time.h
app/src/main/jni/unix/: CMakeLists.txt  unix-getopt.c  unix.c
app/src/main/jni/xml/: CMakeLists.txt  xml.c
app/src/main/jni/yyjson/: CMakeLists.txt  lua_yyjson.c  yyjson.c  yyjson.h
app/src/main/jni/zip/: CMakeLists.txt  lua_zip.c  zip.h  zip_add.c  zip_add_dir.c  zip_add_entry.c  zip_buffer.c  zip_close.c  zip_delete.c  zip_dir_add.c  zip_dirent.c  zip_discard.c  zip_entry.c  zip_entry_free.c  zip_entry_new.c  zip_err_str.c  zip_error.c  zip_error_clear.c  zip_error_get.c  zip_error_get_sys_type.c  zip_error_strerror.c  zip_error_to_str.c  zip_extra_field.c  zip_extra_field_api.c  zip_fclose.c  zip_fdopen.c  zip_file_add.c  zip_file_error_clear.c  zip_file_error_get.c  zip_file_get_comment.c  zip_file_get_external_attributes.c  zip_file_get_offset.c  zip_file_rename.c  zip_file_replace.c  zip_file_set_comment.c  zip_file_set_external_attributes.c  zip_file_set_mtime.c  zip_file_strerror.c  zip_filerange_crc.c  zip_fopen.c  (+66 more)
app/src/main/jni/zlib/: CMakeLists.txt  lua_zlib.c
core/: build.gradle.kts
core-apk/: build.gradle.kts
core-apk/src/main/: AndroidManifest.xml
editor/: build.gradle.kts
gradle/: libs.versions.toml
signer/: build.gradle.kts
(+227 files in other folders)
